- Pin setuptools version on RTD to allow the docs to build.
- Add a tutorial to the docs on model selection.
- Update emcee vendored code.
- Fix repr of Model
- Fix several warnings during test run.
- Add error bar plotting to refnx GUI.
- Improved the specular ridge finding methodology for data reduction.

0.1.18
------
- SPZ batch reduction
- remove some roadblocks to JAXification (float casting in Parameter.value
 setter)
- volume fraction of solvent can now be used when constructing a Slab from a
 Scatterer.
- Fully remove traces from graph when opening new experiments.
- Store reduction_options when processing spectra.
- RuntimeError if a log transform creates non-finite numbers.
- ReflectModels can now use a q_offset to correct for possible angular
  misalignments.
- `possibly_create_parameter` and `is_parameter` now use `BaseParameter` for
  their operation, rather than `Parameter`. Thus _BinaryOp and _UnaryOp can be
  given to these operations and work. This enables construction of various
  objects (SLD/Slab/etc) from constrained parameters, rather than setting a
  constraint afterwards.
- MixedSlab is now allowed to be the first/last Component in a Structure.

0.1.19
------
- MCMC sampling in GUI now plots parameter value vs step number, so you can
  see how many samples to burn
- Fixed GUI crash when trying to make a snapshot with a name that has already
  been used.
- Give BaseObjective a default weighted attribute, enabling it to be used in
  GlobalObjective.
- Fallback to numerical estimation of Hessian/Covariance matrix if an
  Objective cannot calculate a residuals array (e.g. mixed use of
  BaseObjective/Objective in a GlobalObjective).
- Vendor scipy.stats.qmc.
- Use Latin Hyper Cube sampling to initialise MCMC walkers when initialising
  with prior. This ensures a good distribution of walkers and no clustering.

0.1.20
------
- Make default Spline.dz.bounds.lb > 0, so that crashes aren't experienced
  when a dz is set to 0. GH549