@@ -332,3 +332,4 @@ in 0.1.13.
 ------
 - Make default Spline.dz.bounds.lb > 0, so that crashes aren't experienced
   when a dz is set to 0. GH549
+- Add the shgo keyword parameters 'n' and 'iters'.
